# tokio-process-tools

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: README.md  chunk_delivery.rs  line_delivery.rs  stream_consumption.rs
benches/support/: mod.rs
examples/: collect_output_bytes.rs  collect_output_lines.rs  custom_visitor.rs  discard_output.rs  interactive_stdin.rs  process_naming.rs  stream_to_file.rs  terminate_on_drop.rs  terminate_on_timeout.rs  wait_for_readiness.rs
src/: async_drop.rs  collector.rs  collectors.rs  error.rs  inspector.rs  interrupt.rs  lib.rs  output.rs  output_stream.rs  panic_on_drop.rs  process.rs  process_handle.rs  send_sync_proof.rs  signal.rs  terminate_on_drop.rs  test_support.rs
src/output_stream/: broadcast.rs  collectable.rs  collection.rs  config.rs  consumer.rs  event.rs  impls.rs  line.rs  mod.rs  num_bytes.rs  options.rs  policy.rs  single_subscriber.rs  subscription.rs  visitor.rs
src/output_stream/backend/: consumer_api.rs  factories.rs  mod.rs  test_support.rs
src/output_stream/backend/broadcast/: fanout.rs  fast.rs  mod.rs  reader.rs  state.rs  subscription.rs  tests.rs
src/output_stream/backend/broadcast/tests/: backend_selection.rs  common.rs  drop_lifecycle.rs  mod.rs  reliable_delivery.rs  replay.rs
src/output_stream/backend/discard/: mod.rs
src/output_stream/backend/single_subscriber/: mod.rs  reader.rs  state.rs  subscription.rs  tests.rs
src/output_stream/backend/single_subscriber/tests/: active_consumer.rs  collector_lifecycle.rs  common.rs  consume.rs  consume_with.rs  consumer_lifecycle.rs  consumer_unit_lifecycle.rs  inspector_lifecycle.rs  line_waiter.rs  mod.rs  reader.rs  reader_backpressure.rs  reader_chunking.rs  reader_drain.rs  reader_errors.rs  reader_test_support.rs  replay.rs  writer_lifecycle.rs
src/output_stream/consumer/: api.rs  collect.rs  consumer.rs  driver.rs  inspect.rs  line_waiter.rs  mod.rs  test_support.rs  visitor.rs  wait.rs  write.rs
src/output_stream/consumer/visitors/: collect.rs  inspect.rs  mod.rs  wait.rs  write.rs
src/output_stream/line/: adapter.rs  mod.rs  options.rs  parser.rs
src/output_stream/visitors/: collect.rs  factories.rs  inspect.rs  mod.rs  wait.rs  write.rs
src/process/: builder.rs  mod.rs  name.rs  stream_config.rs
src/process_handle/: drop_guard.rs  into_inner.rs  mod.rs  options.rs  output_collection.rs  replay.rs  signal.rs  spawn.rs  state.rs  termination.rs  wait.rs  wait_builder.rs
src/process_handle/group/: job_object.rs  mod.rs
src/process_handle/output_collection/: drain.rs  mod.rs  options.rs  output.rs  tests.rs
src/process_handle/termination/: diagnostics.rs  mod.rs  shutdown.rs
src/process_handle/termination/tests/: error_types.rs  graceful_timeouts_builder.rs  kill.rs  mod.rs  preflight_reap.rs  signal_failures.rs  terminate.rs  windows.rs
tests/: drop_guard.rs  kill.rs  output_collection.rs  preflight_reap.rs  process_builder.rs  process_handle.rs  replay.rs  signal.rs  terminate.rs  wait.rs
tests/common/: mod.rs
