[package]
name = "tokio-process-tools"
version = "0.9.1"
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/lpotthast/tokio-process-tools"
description = "Correctness-focused async subprocess orchestration for Tokio: bounded output, multi-consumer streams, output detection, guaranteed cleanup and graceful termination."
categories = ["asynchronous", "os"]
keywords = ["tokio", "process", "subprocess", "command", "output"]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
exclude = [
    "/.idea",
    "/.claude",
    "/AGENTS.md",
    "/Justfile",
    "/TODO.md",
]

[dependencies]
bytes = { version = "1.11.1", default-features = false, features = ["std"] }
memchr = { version = "2.7.6", default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", default-features = false, features = ["process", "sync", "io-util", "macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
typed-builder = "0.23.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", default-features = false, features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
assertr = "0.6.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
jiff = "0.2.16"
proptest = { version = "1.5.0", default-features = false, features = ["std", "bit-set"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["fs"] }
tokio-test = "0.4.5"
tracing-test = "0.2.6"

[[bench]]
name = "chunk_delivery"
harness = false

[[bench]]
name = "line_delivery"
harness = false

[lints.rust]
missing_docs = "warn"
private_bounds = "deny"

[lints.clippy]
pedantic = "warn"
