[package]
name = "tokio-process-tools"
version = "0.11.1"
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/lpotthast/tokio-process-tools"
description = "Correctness-focused async subprocess orchestration for Tokio: bounded output, multi-consumer streams, output detection, guaranteed cleanup and graceful termination."
categories = ["asynchronous", "os"]
keywords = ["tokio", "process", "subprocess", "command", "output"]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
exclude = [
    "/.github",
    "/.idea",
    "/.claude",
    "/CLAUDE.md",
    "/Justfile",
]

[dependencies]
bytes = { version = "1.11.1", default-features = false, features = ["std"] }
memchr = { version = "2.7.6", default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", default-features = false, features = ["process", "sync", "io-util", "macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
typed-builder = "0.23.2"
unwrap-infallible = "1.0.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", default-features = false, features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Threading"] }

[features]
default = []
# Internal feature that activates the test-helper binaries and any dev-only dependency features they rely on. Not meant
# for downstream use. Auto-enabled during `cargo test` via the self dev-dependency below.
__test-helpers = ["tokio/signal"]

[dev-dependencies]
assertr = "0.6.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
jiff = "0.2.16"
proptest = { version = "1.5.0", default-features = false, features = ["std", "bit-set"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["fs"] }
tokio-test = "0.4.5"
tracing-test = "0.2.6"
# Dependency on self. Enables `__test-helpers` to build addtional binaries located under tests/bin.
tokio-process-tools = { path = ".", features = ["__test-helpers"] }

[[bin]]
name = "graceful_shutdown_test_child"
path = "tests/bin/graceful_shutdown_test_child.rs"
required-features = ["__test-helpers"]
test = false
bench = false
doc = false

[[bench]]
name = "chunk_delivery"
harness = false

[[bench]]
name = "line_delivery"
harness = false

[lints.rust]
missing_docs = "warn"
private_bounds = "deny"

[lints.clippy]
pedantic = "warn"
